deployment/namespace.yaml
# Namespace for the MLOps project
apiVersion: v1
kind: Namespace
metadata:
  name: mlops
  labels:
    name: mlops
